--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Facebook",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.580.0",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "request": "^2.88.0"
+    "moment": "^2.24.0",
+    "request": "^2.88.0",
+    "uuid": "^3.3.3"
   },
   "engines": {
     "node": "~4.1.2"
