--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "messenger-quick-start",
+  "name": "messenger-chat-bot",
   "version": "1.0.0",
-  "description": "An example webhook for Facebook Messenger quick start tutorial.",
+  "description": "Chatbot for hiring me.",
   "main": "app.js",
   "scripts": {
     "start": "npx nodemon app.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fbsamples/messenger-platform-samples.git"
+    "url": "https://github.com/kobecow/HireMeIfYouCan.git"
   },
   "author": "Facebook",
   "license": "ISC",
@@ -17,8 +17,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "moment": "^2.24.0",
-    "request": "^2.88.0",
-    "uuid": "^3.3.3"
+    "request": "^2.88.0"
   },
   "engines": {
     "node": "~4.1.2"
